@startuml
'https://plantuml.com/class-diagram

        class ScoreRecord{
            - userName: String
            - score: int
            - recordTime: LocalDateTime
            + ScoreRecord(String userName, int score, LocalDateTime recordTime)
            + getUserName(): String
            + getScore(): int
            + getRecordTime(): LocalDateTime
            + toString(): String
            + compareTo(ScoreRecord other): int
        }

        interface ScoreDao{
            + getAllScores(): List<ScoreRecord>
            + addScore(ScoreRecord record)
            + clearScores()
            + printScores(List<ScoreRecord> scoreRecords)
        }

        class ScoreDaoImpl{
            - dataFilePath: String
            - scoreRecords: List<ScoreRecord>
            - formatter: DateTimeFormatter
            + ScoreDaoImpl()
            + getAllScores(): List<ScoreRecord>
            + addScore(ScoreRecord record)
            + clearScores()
            + printScores(List<ScoreRecord> scoreRecords)
            - loadFromFile(): List<ScoreRecord>
            - saveToFile()
        }

        ScoreDao <|.. ScoreDaoImpl : 实现

        ScoreDaoImpl --> ScoreRecord : 存储 List<ScoreRecord>

        class Game{
            - scoreDao: ScoreDao
            - score: int
            + action()
        }

        Game --> ScoreDao : 使用 (Client)
        Game ..> ScoreRecord : 创建 ScoreRecord 实例


@enduml